-
Bug
-
Resolution: Fixed
-
Blocker
-
None
-
None
-
RHEL 7.4 debug kernel
-
3
-
9223372036854775807
/Users/c17817/work/Lustre/work-wc/LU-11413/lustre/lustre/obdclass/llog_cat.c: In function ‘llog_cat_prep_log’:
/Users/c17817/work/Lustre/work-wc/LU-11413/lustre/lustre/obdclass/llog_cat.c:284:42: error: ‘LLOGH_CAT’ undeclared (first use in this function)
down_read_nested(&cathandle->lgh_lock, LLOGH_CAT);
^
/Users/c17817/work/Lustre/work-wc/LU-11413/lustre/lustre/obdclass/llog_cat.c:284:42: note: each undeclared identifier is reported only once for each function it appears in
/Users/c17817/work/Lustre/work-wc/LU-11413/lustre/lustre/obdclass/llog_cat.c:285:47: error: ‘LLOGH_LOG’ undeclared (first use in this function)
down_write_nested(&(*ploghandle)->lgh_lock, LLOGH_LOG);